--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,20 +1,5 @@
 @import "mix";
 
-@media (min-width: 320px) and (max-width: 1000px) {
-  .wrapper {
-    width: initial;
-    margin: 0 20px;
-  }
-  .headphones__img{
-    display: none;
-  }
-  .m-headphones__img {
-    display: inline !important;
-    z-index: 0;
-    margin-top: -78px;
-  }
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -23,6 +8,10 @@
 .wrapper {
   max-width: 1440px;
   margin: 0 auto;
+  @media (min-width: 320px) and (max-width: 1000px) {
+      width: initial;
+      margin: 0;
+  }
 }
 
 .container {
@@ -35,380 +24,9 @@ html, body {
   height: 100vh;
   background: $bg_text;
   box-sizing: border-box;
-}
-
-.headphones {
-  height: 538px;
-  background: #2B2835;
-}
-
-.headphones__product {
-  display: inline-flex;
-  background-size: 100%;
-}
-
-.headphones__img {
-  flex: auto;
-  position: relative;
-  z-index: 0;
-  width: 856px;
-  height: 766px;
-  left: 0;
-  top: -78px;
-}
-
-.m-headphones__img {
-  display: none;
-}
-
-.headphones__name {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  letter-spacing: 1px;
-  color: #FFFFFF;
-}
-
-.headphones__description {
-  font-weight: bold;
-  font-size: 40px;
-  line-height: 43px;
-  color: #FFFFFF;
-  margin-top: 13px;
-}
-
-.headphones__product-buy {
-  flex: auto;
-  margin-top: 121px;
-  margin-right: 135px;
-}
-
-.headphones__buy {
-  display: inline-flex;
-  align-items: center;
-  margin-bottom: 12px;
-  margin-top: 51px;
-}
-
-.headphones__price {
-  font-size: 40px;
-  margin-right: 43px;;
-  line-height: 49px;
-  color: #F2F2F2;
-}
-
-.headphones__button {
-  margin-right: 34px;
-  text-decoration: none;
-  text-align: center;
-  color: black;
-  background: $bg_btn_hover;
-  border-radius: 100px;
-  border: none;
-  width: 170px;
-  height: 41px;
-}
-
-.headphones__button:hover {
-  background: $bg_btn_hover;
-}
-
-.headphones__music {
-  color: $bg_btn_hover;
-  font-size: 13px;
-  line-height: 20px;
-  font-weight: 500;
-  margin-top: 10px;
-}
-
-.beats-pill {
-  display: flex;
-  background: $bg_text;
-
-}
-
-.beats-pill_description {
-  font-size: 16px;
-  line-height: 20px;
-  color: #2B2835;
-}
-
-.beats-pill__name {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 50px;
-  line-height: 55px;
-  margin-top: 7px;
-  color: #2B2835;
-}
-
-.beats-pill__product {
-  flex: auto;
-  margin-left: 93px;
-  margin-top: 189px;
-}
-
-.beats-pill__price {
-  display: flex;
-}
-
-.beats-pill__img {
-}
-.slider {
-  width: 30%;
-  height: 100px;
-  margin-left: 400px;
-  .slider-dots {
-    display: inline-block;
-    position: relative;
-    width: 10px;
-    height: 10px;
-    border: 1px solid black;
-    background: #D1D1D1;
-    border-radius: 50px;
+  @media (min-width: 320px) and (max-width: 1000px){
+    body {
+      //overflow-x: hidden;
+    }
   }
 }
-
-
-.beats-pill__change {
-  font-size: 40px;
-  line-height: 55px;
-  color: #2B2835;
-  margin-top: 20px;
-}
-
-.beats-pill__find {
-  font-size: 16px;
-  line-height: 20px;
-  color: $bg_main;
-  margin-top: 11px;
-}
-
-.beats-pill__buy {
-  flex:auto;
-  font-size: 40px;
-  line-height: 49px;
-  color: $bg_main;
-  margin-top: 51px;
-}
-
-.beats-pill__button {
-  flex: auto;
-  position: absolute;
-  width: 110px;
-  height: 41px;
-  border-radius: 100px;
-  background: black;
-  color: $bg_text;
-  text-align: center;
-  line-height: 40px;
-  text-decoration: none;
-  margin-top: 51px;
-  margin-left: 163px;
-  border: none;
-}
-
-.beats-pill__button:hover {
-  background: $bg_btn_hover;
-}
-
-.beats-pill__music {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 13px;
-  line-height: 20px;
-  color: #000000;
-  mix-blend-mode: normal;
-  opacity: 0.52;
-  margin-top: 12px;
-}
-
-.change-color {
-  margin-top: 19px;
-}
-
-.color-white {
-  @include change_color;
-  background: #FFFFFF;
-}
-
-.color-red {
-  @include change_color;
-  background: #DD5656;
-}
-
-.color-black {
-  @include change_color;
-  background: #030303;
-}
-
-.change-color a:hover {
-  opacity: 0.7;
-}
-
-.powerbeats {
-  display: inline-flex;
-  width: 100%;
-  height: 844px;
-  background: $grad_powerbeats;
-}
-
-.powerbeats__product {
-  display: flex;
-  background: url("/src/img/group_18.svg");
-  background-size: 100%;
-  height: 700px;
-  top: 1451px;
-
-}
-
-.powerbeats__img {
-  flex: auto;
-  position: relative;
-  z-index: 0;
-  width: 856px;
-  height: 766px;
-  left: 0;
-  top: -78px;
-}
-
-.powerbeats__product-buy {
-  flex: auto;
-  margin-top: 233px;
-  width: 100%;
-  margin-left: 32px;
-}
-
-.powerbeats__description-small {
-  color: #F8F8F9;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.powerbeats__title{
-  color: #F8F8F9;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 50px;
-  line-height: 55px;
-  margin-top: 7px;
-}
-
-.powerbeats__description{
-  color: #F8F8F9;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 27px;
-  margin-top: 22px;
-}
-
-.powerbeats__price{
-  display: inline-flex;
-  font-size: 40px;
-  line-height: 49px;
-  color: #FFFF00;
-  margin-top: 70px;
-}
-
-.powerbeats__button{
-  font-size: 14px;
-  background: black;
-  border: none;
-  color: #FFFFFF;
-  width: 170px;
-  height: 41px;
-  border-radius: 100px;
-  text-decoration: none;
-  margin-left: 41px;
-  text-align: center;
-}
-
-.powerbeats__button:hover {
-  background: $bg_btn_hover;
-}
-
-.powerbeats__music{
-  font-style: normal;
-  font-weight: 500;
-  font-size: 13px;
-  line-height: 20px;
-  color: $bg_text;
-}
-
-.beatsx {
-  display: flex;
-  background: $bg_text;
-
-}
-
-.beatsx__title {
-  font-size: 16px;
-  line-height: 20px;
-  color: $bg_main;
-}
-
-.beatsx__name {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 50px;
-  line-height: 55px;
-  margin-top: 7px;
-  color: $bg_main;
-}
-
-.beatsx__product {
-  flex: auto;
-  margin-left: 93px;
-  margin-top: 189px;
-}
-
-.beats__img {
-  flex:auto;
-  left: 631px;
-  top: 663px;
-  margin-right: auto;
-}
-
-.beatsx__price {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-}
-
-.beatsx__buy {
-  flex:auto;
-  font-size: 40px;
-  line-height: 49px;
-  color: $bg_main;
-  margin-top: 51px;
-}
-
-.beatsx__button {
-  flex: auto;
-  width: 110px;
-  max-width: 110px;
-  height: 41px;
-  border-radius: 100px;
-  background: #000000;
-  color: $bg_text;
-  text-align: center;
-  line-height: 40px;
-  text-decoration: none;
-  border: none;
-  margin-top: 51px;
-  margin-left: 41px;
-  margin-right: 288px;
-}
-
-.beatsx__button:hover {
-  background: $bg_btn_hover;
-}
-
-
-
-
-
