--- a/src/css/burger.scss
+++ b/src/css/burger.scss
@@ -1,6 +1,6 @@
 @import "mix";
 
-@media all and (max-width: 768px - 1px) {
+@media (min-width: 320px) and (max-width: 1000px) {
   .nav__burger {
     display: flex !important;
   }
@@ -23,28 +23,25 @@
 }
 
 .bar1, .bar2, .bar3 {
-  width: 35px;
-  height: 5px;
+  width: 16px;
+  height: 2px;
   background-color: #FFFFFF;
   margin: 6px 0;
   transition: 0.4s;
 }
 
 
-.change .bar1 {
-  -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
-  transform: rotate(-45deg) translate(-9px, 6px) ;
-}
-
-
-.change .bar2 {
-  opacity: 0;
-}
-
-.change .bar3 {
-  -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
-  transform: rotate(45deg) translate(-8px, -8px) ;
-}
+//.change .bar1 {
+//  -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
+//  transform: rotate(-45deg) translate(-9px, 6px) ;
+//}
+//.change .bar2 {
+//  opacity: 0;
+//}
+//.change .bar3 {
+//  -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+//  transform: rotate(45deg) translate(-8px, -8px) ;
+//}
 
 .burger-menu__box {
   display: block;
