--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -16,7 +16,8 @@
       </div>
     </div>
     <div class="nav__logo">
-      <img src="../img/logo.svg" alt="fill">
+      <img class="logo_desktop" src="../img/logo.svg" alt="nav_logo">
+      <img class="logo_mobile" src="../img/mobile/m_navlogo.svg" alt="m_nav_logo">
     </div>
     <div class="nav__list">
       <ul class="nav__list-item">
