--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,8 +5,8 @@
     </div>
     <div class="footer__menu">
       <ul class="footer__list">
-        <li>
-          <ul class="products-list">
+        <div class="products-list">
+          <ul>
             <h2>Products</h2>
             <li><a href="#">HEADPHONES</a></li>
             <li><a href="#">EARPHONES</a></li>
@@ -16,21 +16,25 @@
             <li><a href="#">BEATSAUDIO</a></li>
             <li><a href="#">SPECIAL OFFERS</a></li>
           </ul>
-        </li>
-        <li>
-          <ul class="support-list">
-            <h2>Support</h2>
-            <li><a href="#">PRODUCT HELP</a></li>
-            <li><a href="#">SERVICE & WARRANTY</a></li>
-            <li><a href="#">REGISTER YOUR BEATS</a></li>
-            <li><a href="#">UPDATE YOUR BEATS</a></li>
-            <li><a href="#">AUTHORIZED SERVICE PROVIDERS</a></li>
-            <li><a href="#">CONTACT SUPPORT</a></li>
-            <li><a href="#">INTERNATIONAL NUMBERS</a></li>
+        </div>
+        <div class="support-list">
+          <ul>
+            <div>
+              <h2>Support</h2>
+            </div>
+            <div>
+              <li><a href="#">PRODUCT HELP</a></li>
+              <li><a href="#">SERVICE & WARRANTY</a></li>
+              <li><a href="#">REGISTER YOUR BEATS</a></li>
+              <li><a href="#">UPDATE YOUR BEATS</a></li>
+              <li><a href="#">AUTHORIZED SERVICE PROVIDERS</a></li>
+              <li><a href="#">CONTACT SUPPORT</a></li>
+              <li><a href="#">INTERNATIONAL NUMBERS</a></li>
+            </div>
           </ul>
-        </li>
-        <li>
-          <ul class="company-list">
+        </div>
+        <div class="company-list">
+          <ul>
             <h2>Company</h2>
             <li><a href="#">PRODUCT HELP</a></li>
             <li><a href="#">NEWS AND EVENTS</a></li>
@@ -40,7 +44,7 @@
             <li><a href="#">TERMS OF USE</a></li>
             <li><a href="#">COOKIES</a></li>
           </ul>
-        </li>
+        </div>
       </ul>
     </div>
     <div class="footer__follow">
