--- a/src/css/beatsx.scss
+++ b/src/css/beatsx.scss
@@ -3,6 +3,22 @@
 .beatsx__container {
   display: flex;
   background: $bg_text;
+  @media (min-width: 320px) and (max-width: 768px){
+    display: inline-flex;
+    flex-direction: column-reverse;
+  }
+}
+
+.beatsx__product {
+  flex: auto;
+  margin-left: 93px;
+  margin-top: 189px;
+  width: 422px;
+  @media (min-width: 320px) and (max-width: 768px){
+    flex: 0 1 auto;
+    margin-top: 40px;
+    margin-left: 19px;
+  }
 }
 
 .beatsx__title {
@@ -20,11 +36,12 @@
   color: $bg_main;
 }
 
-.beatsx__product {
-  flex: auto;
-  margin-left: 93px;
-  margin-top: 189px;
-  width: 422px;
+.beatsx__description {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 27px;
+  margin-top: 22px;
 }
 
 .beatsx__image {
@@ -33,18 +50,21 @@
   top: 663px;
   margin-right: auto;
   .beatsx__img{
-    @media (min-width: 320px) and (max-width: 1000px){
+    @media (min-width: 320px) and (max-width: 768px){
       display: none;
     }
   }
   .m-beatsx__img{
     display: none;
+    @media (min-width: 320px) and (max-width: 768px){
+      display: block;
+    }
   }
 }
 
 .beatsx__price {
   display: inline-flex;
-  margin-top: 51px;
+  margin-top: 70px;
 }
 
 .beatsx__buy {
@@ -63,6 +83,10 @@
   text-decoration: none;
   border: none;
   margin-left: 41px;
+  @media (min-width: 320px) and (max-width: 768px){
+    @include m-button;
+    margin-left: 10px;
+  }
 }
 
 .beatsx__button:hover {
