--- a/src/css/footer.scss
+++ b/src/css/footer.scss
@@ -1,21 +1,35 @@
+@import "mix";
+
 .footer {
   background: #2B2835;
   height: 344px;
+  @media (min-width: 320px) and (max-width: 768px){
+    height: auto;
+  }
 }
 
 .footer__main {
-  display: flex;
   padding-bottom: 21px;
   justify-content: space-around;
   align-items: stretch;
   flex-wrap: wrap;
   padding-top: 55px;
+  @media (min-width: 320px) and (max-width: 768px){
+    flex-direction: column;
+    text-align: center;
+    padding-left: 20%;
+    padding-right: 20%;
+  }
 }
 
 .footer__logo {
   flex: auto;
   text-align: center;
   margin-left: 135px;
+  @media (min-width: 320px) and (max-width: 768px){
+    margin: 0;
+
+  }
 }
 
 .footer__menu{
@@ -29,25 +43,32 @@
   font-weight: 600;
   font-size: 20px;
   line-height: 20px;
-  color: white;
-  justify-content: space-between;
+  color: $bg_text;
   list-style: none;
-  width: 100%;
-
+  //height: 239px;
+  @media (min-width: 320px) and (max-width: 768px){
+    flex-direction: column;
+    align-self: center;
+    text-align: center;
+    margin-top: 35px;
+  }
   a{
-    color: white;
+    color: $bg_text;
     text-decoration: none;
     font-size: 14px;
     font-weight: 100;
     opacity: 0.5;
   }
   a:hover {
-    color: #00B0FF;
+    color: $bg_button;
   }
   h2 {
     font-weight: 600;
     font-size: 24px;
     line-height: 31px;
+    @media (min-width: 320px) and (max-width: 768px){
+      font-size: 18px;
+    }
   }
 }
 .products-list, .support-list, .company-list {
@@ -60,20 +81,32 @@
 .products-list {
   padding-right: 88px;
   padding-left: 99px;
+  @media (min-width: 320px) and (max-width: 768px){
+    padding: 0;
+  }
 }
 
 .support-list {
   padding-right: 88px;
+  @media (min-width: 320px) and (max-width: 768px){
+    padding: 0;
+  }
 }
 
 .company-list {
   padding-right: 90px;
+  @media (min-width: 320px) and (max-width: 768px){
+    padding: 0;
+  }
 }
 
 .footer__follow {
-  color: #FFFFFF;
+  flex: 0 1 auto;
+  color: $bg_text;
   margin-right: 182px;
-
+  @media (min-width: 320px) and (max-width: 768px){
+    margin-right: 0;
+  }
   i{
     width: 32px;
     height: 32px;
@@ -82,13 +115,16 @@
     font-weight: normal;
     text-align: center;
     line-height: 32px;
-    color: #2B2835;
-    background: #FFFFFF;
+    color: $bg_main;
+    background: $bg_text;
     margin-top: 30px;
     margin-right: 14px;
+    @media (min-width: 320px) and (max-width: 768px){
+      margin: 0;
+    }
   }
   i:hover {
-    color: #FFFFFF;
+    color: $bg_text;
     background: #00B0FF;
   }
 }
@@ -97,9 +133,12 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 15px;
-  color: #FFFFFF;
+  color: $bg_text;
   mix-blend-mode: normal;
   opacity: 0.31;
   text-align: center;
+  @media (min-width: 320px) and (max-width: 768px){
+    margin-top: 50px;
+  }
 }
 
