--- a/src/css/nav.scss
+++ b/src/css/nav.scss
@@ -16,13 +16,13 @@
 
 .logo_desktop {
   margin-left: 94px;
-  @media (min-width: 320px) and (max-width: 1000px){
+  @media (min-width: 320px) and (max-width: 768px){
     display: none;
   }
 }
 .logo_mobile {
   display: none;
-  @media (min-width: 320px) and (max-width: 1000px){
+  @media (min-width: 320px) and (max-width: 768px){
     display: block;
     margin-left: 20px;
   }
@@ -70,7 +70,7 @@
   display: flex;
   margin-left: 137px;
   @media all and (max-width: 768px){
-    flex: none;
+    margin: 0;
   }
 }
 
