--- a/src/css/signup.scss
+++ b/src/css/signup.scss
@@ -32,10 +32,12 @@
     margin: auto;
     box-sizing: border-box;
     border: $border_input;
+    padding: 0 22px;
 
     @media all and (max-width: 768px) {
       width: 298px;
       height: 41px;
+      padding: 0 12px;
     }
   }
 }
