--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,22 +7,26 @@
       <ul class="footer__list">
         <div class="products-list">
           <ul>
-            <h2>Products</h2>
-            <li><a href="#">HEADPHONES</a></li>
-            <li><a href="#">EARPHONES</a></li>
-            <li><a href="#">SPEAKERS</a></li>
-            <li><a href="#">ACCESSORIES</a></li>
-            <li><a href="#">COLLABORATIONS</a></li>
-            <li><a href="#">BEATSAUDIO</a></li>
-            <li><a href="#">SPECIAL OFFERS</a></li>
+            <div class="class_a">
+              <h2>Products</h2>
+            </div>
+            <div class="class_b">
+              <li><a href="#">HEADPHONES</a></li>
+              <li><a href="#">EARPHONES</a></li>
+              <li><a href="#">SPEAKERS</a></li>
+              <li><a href="#">ACCESSORIES</a></li>
+              <li><a href="#">COLLABORATIONS</a></li>
+              <li><a href="#">BEATSAUDIO</a></li>
+              <li><a href="#">SPECIAL OFFERS</a></li>
+            </div>
           </ul>
         </div>
         <div class="support-list">
           <ul>
-            <div>
+            <div class="class_a">
               <h2>Support</h2>
             </div>
-            <div>
+            <div class="class_b">
               <li><a href="#">PRODUCT HELP</a></li>
               <li><a href="#">SERVICE & WARRANTY</a></li>
               <li><a href="#">REGISTER YOUR BEATS</a></li>
@@ -35,14 +39,18 @@
         </div>
         <div class="company-list">
           <ul>
-            <h2>Company</h2>
-            <li><a href="#">PRODUCT HELP</a></li>
-            <li><a href="#">NEWS AND EVENTS</a></li>
-            <li><a href="#">PROMOTION TERMS</a></li>
-            <li><a href="#">PRIVACY POLICY</a></li>
-            <li><a href="#">TRADEMARK</a></li>
-            <li><a href="#">TERMS OF USE</a></li>
-            <li><a href="#">COOKIES</a></li>
+            <div class="class_a">
+              <h2>Company</h2>
+            </div>
+            <div class="class_b">
+              <li><a href="#">PRODUCT HELP</a></li>
+              <li><a href="#">NEWS AND EVENTS</a></li>
+              <li><a href="#">PROMOTION TERMS</a></li>
+              <li><a href="#">PRIVACY POLICY</a></li>
+              <li><a href="#">TRADEMARK</a></li>
+              <li><a href="#">TERMS OF USE</a></li>
+              <li><a href="#">COOKIES</a></li>
+            </div>
           </ul>
         </div>
       </ul>
