--- a/src/css/powerbeats.scss
+++ b/src/css/powerbeats.scss
@@ -55,6 +55,7 @@
 }
 
 .powerbeats__description-small {
+  font-family: Montserrat, Serif;
   color: #F8F8F9;
   font-style: normal;
   font-weight: normal;
@@ -63,6 +64,7 @@
 }
 
 .powerbeats__title{
+  font-family: Montserrat-Bold, Serif;
   color: #F8F8F9;
   font-style: normal;
   font-weight: bold;
@@ -76,6 +78,7 @@
 }
 
 .powerbeats__description{
+  font-family: Montserrat, Serif;
   color: #F8F8F9;
   font-style: normal;
   font-weight: normal;
@@ -85,6 +88,7 @@
 }
 
 .powerbeats__price {
+  font-family: Montserrat, Serif;
   display: inline-flex;
   font-size: 40px;
   line-height: 49px;
@@ -98,6 +102,7 @@
 }
 
 .powerbeats__button{
+  font-family: Montserrat, Serif;
   font-size: 14px;
   background: black;
   border: none;
@@ -119,6 +124,7 @@
 }
 
 .powerbeats__music{
+  font-family: Montserrat, Serif;
   font-style: normal;
   font-weight: 500;
   font-size: 13px;
