--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="footer__main">
     <div class="footer__logo">
-      <img src="../img/logo.svg" alt="footer logo">
+      <img src="../img/logo.png" alt="footer logo">
     </div>
     <div class="footer__menu">
       <ul class="footer__list">
@@ -58,7 +58,7 @@
     <div class="footer__follow">
       <h2>Follow Us</h2>
       <div class="footer___social">
-        <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
         <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
         <a href="#"><i class="fab fa-whatsapp"></i></a>
