--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -16,8 +16,7 @@
       </div>
     </div>
     <div class="nav__logo">
-      <img class="logo_desktop" src="../img/logo.svg" alt="nav_logo">
-      <img class="logo_mobile" src="../img/mobile/m_navlogo.svg" alt="m_nav_logo">
+      <img class="logo_desktop" src="../img/logo.png" alt="nav_logo">
     </div>
     <div class="nav__list">
       <ul class="nav__list-item">
@@ -29,8 +28,8 @@
     </div>
     <div class="nav__icons">
       <a href=""><img class="search" src="../img/search.png" alt="search"></a>
-      <a href=""><img class="account" src="../img/account.svg" alt="account"></a>
-      <a href=""><img class="bucket" src="../img/bucket.svg" alt="bucket"></a>
+      <a href=""><img class="account" src="../img/account.png" alt="account"></a>
+      <a href=""><img class="bucket" src="../img/bucket.png" alt="bucket"></a>
     </div>
   </div>
 </header>
