--- a/src/css/beatsx.scss
+++ b/src/css/beatsx.scss
@@ -22,12 +22,14 @@
 }
 
 .beatsx__title {
+  font-family: Montserrat, Serif;
   font-size: 16px;
   line-height: 20px;
   color: $bg_main;
 }
 
 .beatsx__name {
+  font-family: Montserrat-Bold, Serif;
   font-style: normal;
   font-weight: bold;
   font-size: 50px;
@@ -37,6 +39,7 @@
 }
 
 .beatsx__description {
+  font-family: Montserrat, Serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -68,6 +71,7 @@
 }
 
 .beatsx__buy {
+  font-family: Montserrat, Serif;
   font-size: 40px;
   line-height: 49px;
   color: $bg_main;
@@ -77,6 +81,7 @@
 }
 
 .beatsx__button {
+  font-family: Montserrat, Serif;
   width: 110px;
   height: 41px;
   border-radius: 100px;
