--- a/src/css/burger.scss
+++ b/src/css/burger.scss
@@ -53,6 +53,7 @@
   height: 100%;
   margin: 0;
   padding: 80px 0;
+  font-family: Montserrat, Serif;
   list-style: none;
   text-align: center;
   box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
