--- a/src/css/signup.scss
+++ b/src/css/signup.scss
@@ -9,6 +9,7 @@
 }
 
 .signup__title {
+  font-family: Montserrat, Serif;
   font-style: normal;
   font-weight: bold;
   font-size: 25px;
@@ -16,6 +17,7 @@
 }
 
 .signup__description {
+  font-family: Montserrat, Serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -26,6 +28,7 @@
 
 .signup__input {
   input {
+    font-family: Montserrat, Serif;
     width: 507px;
     height: 36px;
     border-radius: 100px;
@@ -43,6 +46,7 @@
 }
 
 .signup__button {
+  font-family: Montserrat, Serif;
   background: #00B0FF;
   border-radius: 100px;
   width: 507px;
